xterm (276-2) UNRELEASED; urgency=low

  [ Julien Cristau ]
  * Pass -DFOO in CPPFLAGS, not CFLAGS.
  * Update copyright year in debian/copyright.
  * Bump Standards-Version to 3.9.2, no changes needed.
  * Remove David Nusinow from Uploaders.

  [ Sven Joachim ]
  * Update 900_debian_xterm.diff:
    - Disable rmm and smm features in xterm-new rather than xterm, so
      that they do not become enabled in e.g. xterm-256color.

 -- Julien Cristau <jcristau@debian.org>  Sat, 15 Oct 2011 20:54:36 +0200

xterm (276-1) unstable; urgency=low

  [ Timo Aaltonen ]
  * Install .desktop files again. (Closes: #486317, LP: #129041)

  [ Julien Cristau ]
  * New upstream release
    + document limitation of Gtk in connection with xterm's "-into" option, in
      the manpage (LP: #806969)
    + fix regression in command-line parsing introduced in patch #271 changes
      for Debian #629358 (closes: #637910)
  * Don't use dh_testroot in clean.
  * Update 900_debian_xterm.diff to only edit the new xterm+kbs fragment in
    both terminfo and termcap instead of adding an xterm-debian variant to
    change the backspace key behaviour.
  * Update copy of XTerm FAQ to revision 1.168 (dated 2011/09/12).

  [ Sven Joachim ]
  * Update 900_debian_xterm.diff:
    - Add xterm-debian terminfo entry as an alias for xterm.
    - Disable rmm and smm features in xterm terminfo entry to match the
      behavior in ncurses-base (see #574396).

 -- Julien Cristau <jcristau@debian.org>  Sat, 15 Oct 2011 19:38:42 +0200

xterm (271-1) unstable; urgency=low

  * New upstream release
    - amend change for Debian #110226 so that "-h" or "-v" options cause an
      exit, rather than simply printing to stdout while the window is
      displayed (closes: #629358)
    - handle special-case of KeyPress translated to popup-menu action
      (LP: #756273)

 -- Julien Cristau <jcristau@debian.org>  Sat, 23 Jul 2011 13:55:37 +0200

xterm (270-1) unstable; urgency=low

  * New upstream release: